Changed ContactSpaceAndReach to SpaceAndReach

--- a/web/monsterData/List.xhtml
+++ b/web/monsterData/List.xhtml
@@ -133,7 +133,7 @@
                         <f:facet name="header">
                             <h:outputText value="接敵面/間合い"/>
                         </f:facet>
-                        <h:outputText value="#{item.contactSpaceAndReach}"/>
+                        <h:outputText value="#{item.spaceAndReach}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
