Changed name of some field to match CharacterSummary and ScenarioCharacterRecord

--- a/web/monsterSelection/List.xhtml
+++ b/web/monsterSelection/List.xhtml
@@ -55,7 +55,7 @@
                         <f:facet name="header">
                             <h:outputText value="遭遇難易度"/>
                         </f:facet>
-                        <h:outputText value="#{item.charangingRate}"/>
+                        <h:outputText value="#{item.challengeRating}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
@@ -133,7 +133,7 @@
                         <f:facet name="header">
                             <h:outputText value="基本攻撃/組み付き"/>
                         </f:facet>
-                        <h:outputText value="#{item.baseAttackAndGrapple}"/>
+                        <h:outputText value="#{item.baseAttackGrapple}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
