--- a/web/monsterMaster/List.xhtml
+++ b/web/monsterMaster/List.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListMonsterMasterTitle}"></h:outputText>
+            <h:outputText value="モンスター一覧"></h:outputText>
         </ui:define>
         <ui:define name="body">
         <h:form styleClass="jsfcrud_list_form">
