Transrated Link strings to Japanese

--- a/web/monsterMaster/List.xhtml
+++ b/web/monsterMaster/List.xhtml
@@ -177,7 +177,7 @@
                 </h:dataTable>
             </h:panelGroup>
             <br />
-            <h:commandLink action="#{monsterMasterController.prepareCreate}" value="#{bundle.ListMonsterMasterCreateLink}"/>
+            <h:commandLink action="#{monsterMasterController.prepareCreate}" value="新しいモンスターを登録する"/>
         </h:form>
         </ui:define>
     </ui:composition>
