Modified Link text to Japanese

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -23,6 +23,9 @@
         <h:form>
             <h:commandLink action="/monsterMaster/List" value="モンスター一覧"/>
         </h:form>
+        <h:form>
+            <h:commandLink action="/scenarioRecord/List" value="シナリオ一覧"/>
+        </h:form>            
         </p>            
         <h:form>
             <h:commandLink action="/abilityMaster/List" value="Show All AbilityMaster Items"/>
@@ -51,9 +54,7 @@
         <h:form>
             <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
         </h:form>
-        <h:form>
-            <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
-        </h:form>
+
         <h:form>
             <h:commandLink action="/alignmentMaster/List" value="Show All AlignmentMaster Items"/>
         </h:form>
