--- a/web/encounterRecord/Edit.xhtml
+++ b/web/encounterRecord/Edit.xhtml
@@ -78,6 +78,9 @@
                 <h:commandButton action="#{encounterRecordController.update}" value="保存"/>
                 <br />
                 <br />
+                <h:commandLink action="/monsterSelection/List" value="モンスターを追加" immediate="true"/>
+                <br />
+                <br />
                 <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオの編集に戻る" immediate="true"/>
                 <br />
             </h:form>            
