Changed Link Text

--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -64,7 +64,7 @@
                             </f:facet>
                             <h:commandLink action="#{encounterRecordController.prepareView}" value="開始"/>
                             <h:outputText value="  "/>
-                            <h:commandLink action="#{encounterRecordController.prepareEdit}" value="変更"/> 
+                            <h:commandLink action="#{encounterRecordController.prepareEdit}" value="編集"/> 
                             <h:outputText value="  "/>
                             <h:commandLink action="#{encounterRecordController.destroy}" value="削除"/>
                         </h:column>
