Added add button

--- a/web/monsterSelection/List.xhtml
+++ b/web/monsterSelection/List.xhtml
@@ -145,6 +145,7 @@
                 </h:dataTable>
             </h:panelGroup>
             <br />
+            <h:commandButton action="#{monsterSelectionController.add}" value="エンカウンターに追加"/>
         </h:form>
         </ui:define>
     </ui:composition>
