--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -62,7 +62,7 @@
                             <f:facet name="header">
                                 <h:outputText value="&nbsp;"/>
                             </f:facet>
-                            <h:commandLink action="#{encounterRecordController.prepareView}" value="開始"/>
+                            <h:commandLink action="#{encounterRecordController.prepareView}" value="戦闘"/>
                             <h:outputText value="  "/>
                             <h:commandLink action="#{encounterRecordController.prepareEdit}" value="編集"/> 
                             <h:outputText value="  "/>
