Enhanced "Cancel" button on EncounterRecord Edit window, to backu up previsou page where user came from. It allows user to easyly understand the page navitgation.

--- a/web/encounterRecord/Edit.xhtml
+++ b/web/encounterRecord/Edit.xhtml
@@ -27,7 +27,7 @@
                 </h:panelGrid>
                 <br/>
                 <h:commandButton action="#{encounterRecordController.update}" value="保存"/>
-                <h:commandButton action="#{encounterRecordController.prepareList}" value="キャンセル"/>
+                <h:commandButton action="#{encounterRecordController.cancelEdit}" value="キャンセル"/>
 
                 <br />
                 <br />
