Added cancel button

--- a/web/monsterSelection/List.xhtml
+++ b/web/monsterSelection/List.xhtml
@@ -146,6 +146,7 @@
             </h:panelGroup>
             <br />
             <h:commandButton action="#{monsterSelectionController.add}" value="エンカウンターに追加"/>
+            <h:commandButton action="#{monsterSelectionController.cancel}" value="キャンセル"/>            
         </h:form>
         </ui:define>
     </ui:composition>
