Fixed: Modified encounterRecord/View to call MonsterSelectionController.prepareList() so that it retrieve latest monstar list from MONSTER_MASTER table.(previously, list entries ware not updated even if monstarr data was modified)

--- a/web/encounterRecord/View.xhtml
+++ b/web/encounterRecord/View.xhtml
@@ -100,7 +100,7 @@
                     <h:commandButton value="HPをリセット" action="#{encounterRecordController.setInitialHitPoint()}"/>                                                            
                 </h:panelGrid>
                 <br/>
-                <h:commandLink action="/monsterSelection/List" styleClass="smallBold" value="モンスターを追加" immediate="true"/>
+                <h:commandLink action="#{monsterSelectionController.prepareList}" styleClass="smallBold" value="モンスターを追加" immediate="true"/>
                 <br/>
                 <br />
                 <h:commandLink action="#{encounterRecordController.prepareList}" value="シナリオ『#{scenarioRecordController.selected.name}』の編集に戻る"/>
