Added Cancel button on  Scenario Edit Window.

--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -26,6 +26,8 @@
 
                 </h:panelGrid>
                 <h:commandButton action="#{scenarioRecordController.update}" value="更新"/>
+                <h:commandButton action="#{scenarioRecordController.cancel}" value="キャンセル"/>
+
                 <br />
             </h:form>
 
