Correct MBean name so that Save&Sort button now work.

--- a/web/encounterRecord/View.xhtml
+++ b/web/encounterRecord/View.xhtml
@@ -23,7 +23,7 @@
                 <br/><br/>
                 <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン"/>
                 <h:outputLabel value=" "/>
-                <h:commandButton action="#{encounterMemberontroller.saveEncounterMembers}" value="Save and Sort"/>                        
+                <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="セーブとソート"/>                        
 
                 <h:panelGroup rendered="#{encounterMemberController.encounterMemberList.size() > 0}">
 
